Remove redundant flags, add code cache flags.